# cerbera

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: arch.toml  cerbera.toml  debian.toml  fedora.toml  home.toml  nixos.toml
src/: config.rs  event.rs  learn.rs  main.rs  watcher.rs
